# naiive-bayes

./: .gitignore  README.md  naiive-bayes.hy  naiive-bayes.py  naiive_bayes.py  notes.md  pima-dataset-exploration.ipynb  pimadoc.txt  pyproject.toml  python-environment.yaml  python-environment.yml
