[tool.poetry]
name = "naiive-bayes"
version = "0.1.0"
description = "Hy implementation of Naiive Bayes"
authors = ["Josiah Berkebile <praenato14@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "3.7.9"
appdirs = "1.4.3"
astor = "0.8.1"
calysto-hy = "0.1.1"
funcparserlib = "0.3.6"
metakernel = "0.24.4"
rply = "0.7.7"
toolz = "0.10.0"
jupyterlab_pygments = "0.1.1"
jupyterthemes = "^0.20.0"
jupyter_console = "6.1.0"
matplotlib = "3.3.0"
seaborn = "0.10.1"
hy = "0.19.0"
jedhy = "1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
